--- a/ClientBETA/ClientBETA/ClientBETA.csproj
+++ b/ClientBETA/ClientBETA/ClientBETA.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Communications.cs" />
+    <Compile Include="Crypto.cs" />
     <Compile Include="DataProcessing.cs" />
     <Compile Include="LoginForm.cs">
       <SubType>Form</SubType>
