--- a/Gateway/Gateway/Dockerfile
+++ b/Gateway/Gateway/Dockerfile
@@ -1,23 +1,7 @@
-#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
+﻿FROM mcr.microsoft.com/dotnet/sdk:6.0
 
-#Depending on the operating system of the host machines(s) that will build or run the containers, the image specified in the FROM statement may need to be changed.
-#For more information, please see https://aka.ms/containercompat
+COPY bin/Release/net5.0/publish . 
 
-FROM mcr.microsoft.com/dotnet/runtime:3.1 AS base
-WORKDIR /app
+EXPOSE 130
 
-FROM mcr.microsoft.com/dotnet/sdk:3.1 AS build
-WORKDIR /src
-COPY ["Gateway/Gateway.csproj", "Gateway/"]
-RUN dotnet restore "Gateway/Gateway.csproj"
-COPY . .
-WORKDIR "/src/Gateway"
-RUN dotnet build "Gateway.csproj" -c Release -o /app/build
-
-FROM build AS publish
-RUN dotnet publish "Gateway.csproj" -c Release -o /app/publish
-
-FROM base AS final
-WORKDIR /app
-COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "Gateway.dll"]
