--- a/DataService/DataService/DataService.csproj
+++ b/DataService/DataService/DataService.csproj
@@ -2,12 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
-    <PackageReference Include="System.Data.SQLite" Version="1.0.115.5" />
+    <PackageReference Include="Community.CsharpSqlite.SQLiteClient" Version="3.7.7.3" />
   </ItemGroup>
 
 </Project>
